# RTRender

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exceptions.hpp  geometry.hpp  main.cpp  obj_parser.hpp  primitives.cpp  primitives.hpp  renderer.hpp  rtrenderer.cpp  rtrenderer.h  rtrenderer.hpp
cmake/: FindSDL2_image.cmake
renderer/: CMakeLists.txt
renderer/include/: geometry.hpp  obj_parser.hpp  rtrenderer.hpp
renderer/lib/: CMakeLists.txt  primitives.cpp  rtrenderer.cpp
standalone/: CMakeLists.txt  app.cpp
